# 14-Device-backend-Django

./: .dockerignore  .env_template  .gitignore  .gitlab-ci.yml  1-install_ssl_certbot_only_one.sh  Dockerfile  Dockerfile_old  README.md  cron.sh  docker-compose-initiate.yml  docker-compose.yml  docker-compose_prod.yml  gitlab-ci.yml  install.sh  install_project.sh  install_ssl_certbot_only_one.sh  install_test_project.sh  nginx.conf  pyproject.toml  requirements.txt  requirements_dev.txt  stop_remove_gunicorn_nginx.sh
configurations/: prometheus.yml
core/config/: settings.py  urls.py
core/device/: mixins.py  models.py  urls.py  views.py
core/fixtures/: 20241125.json  auth_20241214.json  contenttypes_20241214.json  db_20241214.json
core/for_page/: serializers.py  views.py
core/frontend/: arshin_servises.py  db_services.py  forms.py  tasks.py  urls.py  views.py
core/metering_unit/: admin.py  models.py
core/my_auth/: serializers.py  views.py
core/templates/: base.html
core/utils/: modify_address.py
db_device/: Dockerfile
db_device/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
db_device/device/: models.py  producer.py  serializers.py
db_device/fixtures/: 20241125.json
db_device/frontend/: arshin_servises.py  db_services.py  forms.py  services.py  tasks.py  tests.py  urls.py  views.py
db_device/my_auth/: serializers.py  urls.py
db_device/utils/: modify_address.py
django_app/: Dockerfile
dockerfiles/: docker_django
etc/: crontab
nginx/: nginx.conf
tg_bot/: dockerfile  main.py
without_docker/: install_project.sh
(+188 files in other folders)
